:bug: Blog Card Icon Spacing Fixed

--- a/admin/src/components/BlogCard/styles.css
+++ b/admin/src/components/BlogCard/styles.css
@@ -46,4 +46,6 @@
     margin-left: 5px;
     cursor: pointer;
     color: blue;
+    margin-left: 2px;
+    margin-bottom: 10px;
 }
